libs/@local/hashql/ast/tests/ui/lower/special-form-expander/fn-generics-tuple-type.jsonc
//@ run: fail
//@ description: fn/4 tuple generics with type annotation should fail to compile
[
  "::kernel::special_form::fn",
  {
    "#tuple": ["T"],
    "#type": "Int"
    //~^ ERROR Remove this type annotation
  },
  { "#struct": {} },
  "_",
  ["+", "a", "b"]
]
